--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       rel="shortcut icon"
-      href="/favicon.svg"
+      href="/dist/favicon.svg"
       sizes="any"
       type="image/svg+xml"
     />
     <title>F Dru</title>
-    <script defer="defer" src="/js/chunk-vendors.6bdc1916.js"></script>
-    <script defer="defer" src="/js/app.029d2a87.js"></script>
-    <link href="/css/app.6301f34c.css" rel="stylesheet" />
+    <script defer="defer" src="/dist/js/chunk-vendors.6bdc1916.js"></script>
+    <script defer="defer" src="/dist/js/app.029d2a87.js"></script>
+    <link href="/dist/css/app.6301f34c.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
